# Image-Classification-for-a-City-Dog-Show

./: pyproject.toml
data/: adjust_results4_isadog.py  alexnet_pet-images.txt  alexnet_uploaded-images.txt  calculates_results_stats.py  check_images.py  classify_images.py  get_input_args.py  get_pet_labels.py  print_results.py  resnet_pet-images.txt  resnet_uploaded-images.txt  vgg_pet-images.txt  vgg_uploaded-images.txt
